# Rust-API-GATEWAY

./: Cargo.toml  Dockerfile  README.md  ROADMAP.md  config.json  config_advanced.json  config_multi_protocol.json  dev.sh  docker-compose.yml  generate_jwt.py
.github/workflows/: docker-image.yml  docker-publish.yml
crates/rusta-cli/: Cargo.toml  README.md
crates/rusta-cli/src/: main.rs
crates/rusta-client/: Cargo.toml
crates/rusta-client/src/: lib.rs
crates/rusta-gateway/: Cargo.toml  README.md  config.json
crates/rusta-gateway/src/: main.rs
crates/rusta-rs/: Cargo.toml  Readme.md
crates/rusta-rs/src/: lib.rs
crates/rusta-rs/src/config/: hot_reload.rs  mod.rs  settings.rs  validation.rs
crates/rusta-rs/src/logs/: mod.rs
crates/rusta-rs/src/middleware/: auth.rs  mod.rs  rate_limit.rs  transform.rs
crates/rusta-rs/src/models/: error.rs  mod.rs  router.rs  settings.rs
crates/rusta-rs/src/routes/: auth_http.rs  dns.rs  ftp.rs  health.rs  http.rs  management.rs  metrics.rs  mod.rs  websocket.rs
crates/rusta-rs/src/services/: circuit_breaker.rs  dns.rs  ftp.rs  http.rs  mod.rs  (+3 more)
crates/rusta-rs/tests/: circuit_breaker_integration_test.rs  config_hot_reload_tests.rs  config_settings_tests.rs  config_validation_tests.rs  dns_tests.rs  ftp_tests.rs  integration_tests.rs  jwt_integration_test.rs  load_balancer_tests.rs  real_metrics_test.rs  route_matcher_tests.rs  simple_circuit_test.rs  simple_metrics_test.rs  transformation_tests.rs  websocket_metrics_tests.rs  websocket_tests.rs
crates/rusta-ui/: Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md
crates/rusta-ui/src/: app.rs  main.rs
crates/rusta-ui/style/: main.scss
docs/: POSTMAN_GUIDE.md  WEBSOCKET_GUIDE.md  WEBSOCKET_METRICS_GUIDE.md
examples/http_routing/: README.md  compose.yml  config.json
examples/websocket_routing/: README.md  compose.yml  config.json
(+7 files in other folders)
