[package]
name = "rusta-gateway"
version = "0.2.13"
edition = "2021"
description = "High-performance HTTP API gateway built with Rust"
license = "MIT"
authors = ["Daniel Sarmiento <josedanielsarmiento219@gmail.com>"]
repository = "https://github.com/Alkamal01/Rust-API-GATEWAY"
keywords = ["api-gateway", "proxy", "http", "server"]
categories = ["web-programming", "network-programming"]

[[bin]]
name = "rusta-gateway"
path = "src/main.rs"

[dependencies]
# Local dependencies
rusta-rs = { version = "0.2.10", path = "../rusta-rs" }

# Workspace dependencies
actix-web.workspace = true
actix-governor.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3.0"